--- a/reg_tests/test_files/airfoilRANSEdgeNGPTrilinos.rst/airfoilRANSEdgeNGPTrilinos.rst.yaml
+++ b/reg_tests/test_files/airfoilRANSEdgeNGPTrilinos.rst/airfoilRANSEdgeNGPTrilinos.rst.yaml
@@ -66,20 +66,14 @@ realms:
         ndtw: solve_cont
 
       systems:
-
-        - WallDistance:
-            name: myNDTW
-            max_iterations: 1
-            convergence_tolerance: 1e-8
-
         - LowMachEOM:
             name: myLowMach
-            max_iterations: 2
+            max_iterations: 1
             convergence_tolerance: 1e-8
 
         - ShearStressTransport:
             name: mySST
-            max_iterations: 2
+            max_iterations: 1
             convergence_tolerance: 1e-8
 
     initial_conditions:
@@ -191,6 +185,12 @@ realms:
       parameters: [0,0]
       target_name: Airfoil
 
+    restart:
+      restart_data_base_name: rst1/du91w2.rst
+      restart_frequency: 10
+      restart_start: 0
+      restart_time: 100.0
+
     output:
       output_data_base_name: results/du91w2.e
       output_frequency: 5
@@ -203,15 +203,12 @@ realms:
        - turbulent_viscosity
        - minimum_distance_to_wall
 
-    restart:
-       restart_time: 100
-
 Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0
-      time_step: 6.666666666666667e-2
-      termination_step_count: 20
+      time_step: 3.333333333333333e-2
+      termination_step_count: 60
       time_stepping_type: fixed
       time_step_count: 0
       second_order_accuracy: yes
