Update ABL stable/unstable regression tests (#753)
Update the ABL stable and unstable regression tests so that they are representative of the *precursor* simulations that are performed in production runs. The unstable case modified is based on [Pedersen N02 case](https://github.com/Exawind/wind-energy/blob/master/Pedersen_N02/NaluWindRun03/nalu_neutral_v3.yaml) and the stable case is modified based on [GABLS](https://github.com/Exawind/wind-energy/blob/master/GABLS/NaluWindRun04/nalu_gabls_ksgs_v4_run1.yaml) that were  thoroughly tested in HFM FY20-Q3 milestone work.

--- a/reg_tests/test_files/ablStableEdge/ablStableEdge.yaml
+++ b/reg_tests/test_files/ablStableEdge/ablStableEdge.yaml
@@ -38,7 +38,7 @@ realms:
   # The fluid realm that uses the atmospheric LES mesh created above
 - name: fluidRealm
   mesh: ../../mesh/abl_5km_5km_1km_neutral.g
-  use_edges: no
+  use_edges: yes
   automatic_decomposition_type: rcb
 
   # This defines the equations to be solved: momentum, pressure, static enthalpy,
