--- a/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
+++ b/reg_tests/test_files/oversetRotCylNGPHypre/oversetRotCylNGPHypre.yaml
@@ -11,36 +11,32 @@ linear_solvers:
     type: hypre
     method: hypre_gmres
     preconditioner: boomerAMG
-    tolerance: 1e-12
-    max_iterations: 200
-    kspace: 50
+    tolerance: 1e-10
+    max_iterations: 100
+    kspace: 75
     output_level: 0
-    bamg_max_levels: 1
-    bamg_relax_type: 8
-    bamg_num_sweeps: 2
-    bamg_relax_order: 0
     segregated_solver: yes
-    ensure_reproducible: no
-    use_native_cuda_sort: no
     write_matrix_files: no
-    reuse_linear_system: yes
 
-  # solver for the pressure
-  - name: solve_scalar
+    # File containing hypre specific configuration options
+    hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
+    # YAML node used for this linear solver
+    hypre_cfg_node: hypre_simple_precon
+
+  - name: solve_elliptic
     type: hypre
     method: hypre_gmres
     preconditioner: boomerAMG
-    tolerance: 1e-12
+    tolerance: 1e-10
     max_iterations: 200
-    kspace: 50
+    kspace: 75
     output_level: 0
-    bamg_coarsen_type: 8
-    bamg_interp_type: 6
-    bamg_cycle_type: 1
-    ensure_reproducible: no
-    use_native_cuda_sort: no
-    write_matrix_files:  no
-    reuse_linear_system: yes
+    write_matrix_files: no
+
+    # File containing hypre specific configuration options
+    hypre_cfg_file: ../../hypre_settings/hypre_blade_resolved.yaml
+    # YAML node used for this linear solver
+    hypre_cfg_node: hypre_elliptic
 
 realms:
 
@@ -56,7 +52,7 @@ realms:
 
       solver_system_specification:
         velocity: solve_mom
-        pressure: solve_scalar
+        pressure: solve_elliptic
 
       systems:
 
