--- a/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
+++ b/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
@@ -16,8 +16,8 @@ linear_solvers:
     type: hypre
     method: hypre_gmres
     preconditioner: boomerAMG
-    tolerance: 1e-10
-    max_iterations: 100
+    tolerance: 1e-12
+    max_iterations: 200
     kspace: 75
     output_level: 0
     segregated_solver: yes
@@ -32,7 +32,7 @@ linear_solvers:
     type: hypre
     method: hypre_gmres
     preconditioner: boomerAMG
-    tolerance: 1e-10
+    tolerance: 1e-12
     max_iterations: 200
     kspace: 75
     output_level: 0
@@ -47,7 +47,7 @@ linear_solvers:
     type: hypre
     method: hypre_gmres
     preconditioner: boomerAMG
-    tolerance: 1e-10
+    tolerance: 1e-12
     max_iterations: 200
     kspace: 75
     output_level: 0
@@ -61,7 +61,7 @@ linear_solvers:
 realms:
 
   - name: realm_1
-    mesh: ../../mesh/du91w2_airfoil.exo
+    mesh: ../../mesh/airfoilRANSEdgeTrilinos.rst
     automatic_decomposition_type: rcb
     use_edges: yes
 
@@ -71,7 +71,7 @@ realms:
 
     equation_systems:
       name: theEqSys
-      max_iterations: 2
+      max_iterations: 4
 
       solver_system_specification:
         velocity: solve_mom
@@ -81,12 +81,6 @@ realms:
         ndtw: solve_elliptic
 
       systems:
-
-        - WallDistance:
-            name: myNDTW
-            max_iterations: 1
-            convergence_tolerance: 1e-8
-
         - LowMachEOM:
             name: myLowMach
             max_iterations: 1
@@ -199,13 +193,18 @@ realms:
             specific_dissipation_rate: 0.7
 
     post_processing:
-
     - type: surface
       physics: surface_force_and_moment
       output_file_name: results/forces.dat
       frequency: 1
       parameters: [0,0]
       target_name: Airfoil
+
+    restart:
+      restart_data_base_name: rst1/du91w2.rst
+      restart_frequency: 10
+      restart_start: 0
+      restart_time: 100.0
 
     output:
       output_data_base_name: results/du91w2.e
@@ -223,8 +222,8 @@ Time_Integrators:
   - StandardTimeIntegrator:
       name: ti_1
       start_time: 0
-      time_step: 6.666666666666667e-2
-      termination_step_count: 5
+      time_step: 3.333333333333333e-2
+      termination_step_count: 60
       time_stepping_type: fixed
       time_step_count: 0
       second_order_accuracy: yes
