add les indicator to reg_test

--- a/reg_tests/test_files/IDDESPeriodicHillEdge/IDDESPeriodicHillEdge.yaml
+++ b/reg_tests/test_files/IDDESPeriodicHillEdge/IDDESPeriodicHillEdge.yaml
@@ -190,6 +190,7 @@ realms:
        - minimum_distance_to_wall
        - sst_f_one_blending
        - turbulent_viscosity
+       - iddes_les_scale_ratio
 
 Time_Integrators:
   - StandardTimeIntegrator:
