Add some iddes diagnostics
- change upwind checks to warnings
- add a rans indicator field
- add a max peclet field for checking upwinding

TODO: add parallel consistence to fields

--- a/reg_tests/test_files/IDDESPeriodicHillEdge/IDDESPeriodicHillEdge.yaml
+++ b/reg_tests/test_files/IDDESPeriodicHillEdge/IDDESPeriodicHillEdge.yaml
@@ -191,6 +191,8 @@ realms:
        - sst_f_one_blending
        - turbulent_viscosity
        - iddes_les_scale_ratio
+       - iddes_rans_indicator
+       - max_peclet_factor
 
 Time_Integrators:
   - StandardTimeIntegrator:
