--- a/reg_tests/hypre_settings/hypre_blade_resolved.yaml
+++ b/reg_tests/hypre_settings/hypre_blade_resolved.yaml
@@ -1,20 +1,20 @@
 hypre_simple_precon:
   bamg_max_levels: 1
-  bamg_relax_type: 8 # Use 11 for Hypre master or v2.21 and later
+  bamg_relax_type: 11 # Use 11 for Hypre master or v2.21 and later, 8 for earlier
   bamg_num_sweeps: 2
   bamg_relax_order: 0
 
 hypre_elliptic:
   bamg_max_levels: 7
-  bamg_coarsen_type: 10 # for CPUs (HMIS). For GPUs, use 8 (PMIS)
+  bamg_coarsen_type: 8 # 10 for CPUs (HMIS). For GPUs, use 8 (PMIS)
   bamg_interp_type: 6
-  bamg_relax_type: 8 # Use 11 for Hypre master or v2.21 and later
+  bamg_relax_type: 11 # Use 11 for Hypre master or v2.21 and later, 8 for earlier
   bamg_num_sweeps: 2
   bamg_cycle_type: 1
   bamg_relax_order: 0
   bamg_trunc_factor: 0.1
   bamg_agg_num_levels: 2
-  bamg_agg_interp_type: 4 # for CPUs. For GPUs, use 5 (less communication) or 7 (better convergence)
+  bamg_agg_interp_type: 5 # for 4 CPUs. For GPUs, use 5 (less communication) or 7 (better convergence)
   bamg_agg_pmax_elmts: 3
   bamg_pmax_elmts: 3
   bamg_strong_threshold: 0.25
