--- a/reg_tests/test_files/ablNeutralEdgeRans/ablNeutralEdgeRANS.yaml
+++ b/reg_tests/test_files/ablNeutralEdgeRans/ablNeutralEdgeRANS.yaml
@@ -47,7 +47,8 @@ linear_solvers:
 # Specify the different physics realms.  Here, we just have one for the fluid.
 realms:
 
-  # The fluid realm that uses the 5 km x 5 km x 1 km atmospheric LES mesh.
+  # The fluid realm that uses a 75 m x 75 m x 500 km column of
+  #   an atmospheric RANS mesh.
   - name: fluidRealm
     mesh: ../../mesh/ablNeutralEdgeRans.exo
     use_edges: yes
@@ -150,7 +151,6 @@ realms:
         reference_temperature: 300.0
         roughness_height: 0.1
         gravity_vector_component: 3
-        #turbulent_ke: 0.0
         RANS_abl_bc: yes
         reference_velocity: 6.6
         reference_height: 90.0
@@ -246,10 +246,7 @@ realms:
        - turbulent_viscosity
 
    # Compute spatial averages of velocity and temperature at all height levels
-   # available on the ABL mesh. This is used for post-processing as well as
-   # determining the ABL forcing necessary to drive the wind to a certain
-   # speed/direction at different heights. See `abl_forcing` section below for
-   # details of the driving wind forcing.
+   # available on the ABL mesh. This is used for post-processing.
     boundary_layer_statistics:
       target_name: [ fluid_part ]
       stats_output_file: "abl_statistics.nc"
