--- a/docs/source/theory/ransAbl_wallUserData.yaml
+++ b/docs/source/theory/ransAbl_wallUserData.yaml
@@ -4,5 +4,5 @@ realms:
     - wall_boundary_condition: bc_lower
       wall_user_data:
         RANS_abl_bc: yes
-        fixed_velocity: 6.6
-        fixed_height: 90.0
+        reference_velocity: 6.6
+        reference_height: 90.0
