Remove non-NGP element solver algorithms
See #829 for more details. Requires #830

Additional changes:

- Convert all overset tests to use edge-based scheme
- Update ActLineSimple to use edges (superseded by ActLineSimpleNGP anyway)
- Remove `mixedTetPipe` test (uses element Continuity in non-NGP mode)

--- a/reg_tests/test_files/ActLineSimple/ActLineSimple.yaml
+++ b/reg_tests/test_files/ActLineSimple/ActLineSimple.yaml
@@ -60,7 +60,7 @@ realms:
 
 - name: realm_1
   mesh: ../../mesh/mesh_actlinesimple.exo
-  use_edges: no
+  use_edges: yes
   automatic_decomposition_type: rcb
 
   equation_systems:
@@ -128,7 +128,6 @@ realms:
 
   solution_options:
     name: myOptions
-    use_consolidated_solver_algorithm: yes
 
     options:
 
@@ -142,10 +141,6 @@ realms:
     - projected_nodal_gradient:
         pressure: element
         velocity: element
-
-    - element_source_terms:
-        momentum: [lumped_momentum_time_derivative, upw_advection_diffusion, lumped_actuator]
-        continuity: [advection]
 
   actuator:
     type: ActLineSimple
