--- a/reg_tests/test_files/convTaylorVortex/convTaylorVortex.yaml
+++ b/reg_tests/test_files/convTaylorVortex/convTaylorVortex.yaml
@@ -9,7 +9,7 @@ linear_solvers:
     type: tpetra
     method: gmres
     preconditioner: sgs
-    tolerance: 1e-5
+    tolerance: 1e-12
     max_iterations: 50
     kspace: 50
     output_level: 0
@@ -18,7 +18,7 @@ linear_solvers:
     type: tpetra
     method: gmres
     preconditioner: muelu
-    tolerance: 1e-5
+    tolerance: 1e-12
     max_iterations: 100
     kspace: 100
     output_level: 0
@@ -103,25 +103,21 @@ realms:
             pressure: no
 
     output:
-      output_data_base_name: out/ctv.e
+      output_data_base_name: out/convTaylorVortex.e
       output_frequency: 1
       output_node_set: no
       output_variables:
-       - dual_nodal_volume
        - velocity
        - velocity_exact
        - dpdx
        - dpdx_exact
        - pressure
-       - iblank
-       - iblank_cell
-       - vorticity
 
     solution_norm:
       output_frequency: 1
-      file_name: ctv.dat
-      spacing: 12
-      percision: 6
+      file_name: convTaylorVortex.dat
+      spacing: 30
+      percision: 16
       target_name: [vol_1-HEX]
       dof_user_function_pair:
        - [velocity, convecting_taylor_vortex]
