Fix bug in ActLineSimple introduced by #832

--- a/reg_tests/test_files/ActLineSimple/ActLineSimple.yaml
+++ b/reg_tests/test_files/ActLineSimple/ActLineSimple.yaml
@@ -142,6 +142,10 @@ realms:
         pressure: element
         velocity: element
 
+    - source_terms:
+        momentum:
+          - actuator
+
   actuator:
     type: ActLineSimple
     search_method: stk_kdtree
