--- a/reg_tests/test_files/ablNeutralEdge/ablNeutralEdge.yaml
+++ b/reg_tests/test_files/ablNeutralEdge/ablNeutralEdge.yaml
@@ -258,6 +258,18 @@ realms:
        - temperature
        - turbulent_ke
 
+    sideset_writers:
+      - name: boundary_output
+        output_data_base_name: side.exo
+        output_frequency: 5
+        target_name: north
+        output_variables: 
+        - velocity
+        - pressure
+        - enthalpy
+        - temperature
+        - turbulent_ke
+
     # Compute spatial averages of velocity and temperature at all height levels
     # available on the ABL mesh. This is used for post-processing as well as
     # determining the ABL forcing necessary to drive the wind to a certain
