Add source back to meshMotionTest

--- a/reg_tests/test_files/MeshMotionInterior/MeshMotionInterior.yaml
+++ b/reg_tests/test_files/MeshMotionInterior/MeshMotionInterior.yaml
@@ -105,6 +105,8 @@ realms:
       projected_timescale_type: momentum_diag_inv
 
       options:
+        - source_terms:
+            continuity: density_time_derivative
         - hybrid_factor:
             velocity: 1.0
 
