Check if reference gold directory exists.

--- a/reg_tests/CMakeLists.txt
+++ b/reg_tests/CMakeLists.txt
@@ -16,8 +16,12 @@ set(NALU_WIND_REFERENCE_GOLDS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test_files" CACHE
   "Custom directory for checking gold norms")
 
 if (NOT "${NALU_WIND_REFERENCE_GOLDS_DIR}" STREQUAL "${CMAKE_CURRENT_SOURCE_DIR}/test_files")
-  set(NALU_WIND_REFERENCE_GOLDS_DIR "${NALU_WIND_REFERENCE_GOLDS_DIR}/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_CXX_COMPILER_VERSION}")
-  message(STATUS "Setting custom path for reference golds: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
+  if(EXISTS ${NALU_WIND_REFERENCE_GOLDS_DIR})
+    set(NALU_WIND_REFERENCE_GOLDS_DIR "${NALU_WIND_REFERENCE_GOLDS_DIR}/${CMAKE_SYSTEM_NAME}/${CMAKE_CXX_COMPILER_ID}/${CMAKE_CXX_COMPILER_VERSION}")
+    message(STATUS "Reference gold files will be expected here: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
+  else()
+    message(FATAL_ERROR "Reference gold files path does not exist: ${NALU_WIND_REFERENCE_GOLDS_DIR}")
+  endif()
   if("${TEST_ABS_TOL}" STREQUAL "")
     set(TEST_ABS_TOL "1.0e-15")
   endif()
