--- a/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
+++ b/reg_tests/test_files/oversetMovingCylinder/oversetMovingCylinder_rst.yaml
@@ -4,7 +4,6 @@ Simulations:
     optimizer: opt1
 
 linear_solvers:
-
   - name: solve_scalar
     type: tpetra
     method: gmres
@@ -14,14 +13,23 @@ linear_solvers:
     kspace: 50
     output_level: 0
 
+  #- name: solve_cont
+  #  type: tpetra
+  #  method: gmres
+  #  preconditioner: muelu
+  #  tolerance: 1e-5
+  #  max_iterations: 200
+  #  kspace: 5
+  #  muelu_xml_file_name: ../../xml/milestone.xml
+  #  output_level: 0
+
   - name: solve_cont
-    type: tpetra
-    method: gmres
-    preconditioner: muelu
+    type: hypre
+    method: hypre_gmres
+    preconditioner: boomerAMG
     tolerance: 1e-5
     max_iterations: 200
     kspace: 5
-    muelu_xml_file_name: ../../xml/milestone.xml
     output_level: 0
 
 realms:
@@ -54,7 +62,7 @@ realms:
           - Unspecified-3-HEX
         value:
           pressure: 0.0
-          velocity: [1.0,0.0,0.0]
+          velocity: [0.0,0.0,0.0]
 
     material_properties:
       target_name:
@@ -99,9 +107,9 @@ realms:
         user_function_string_parameters:
          velocity: [interior]
 
-    - open_boundary_condition: bc_6
+    - symmetry_boundary_condition: bc_6
       target_name: side11
-      open_user_data:
+      symmetry_user_data:
 
     - symmetry_boundary_condition: bc_7
       target_name: side12
@@ -134,11 +142,12 @@ realms:
     mesh_motion:
       - name: interior
         mesh_parts: [ Unspecified-2-HEX ]
+        frame: non_inertial
         motion:
          - type: rotation
-           omega: 24.00
+           omega: 1.00
            axis: [0.0, 1.0, 0.0]
-           origin: [5.0, 0.0, 0.0]
+           centroid: [5.0, 0.0, 0.0]
 
     solution_options:
       name: myOptions
@@ -146,7 +155,7 @@ realms:
       fix_pressure_at_node:
         value: 0.0
         node_lookup_type: spatial_location
-        location: [-5.0, 0.0, -5.0]
+        location: [-5.0, 0.05, -5.0]
         search_target_part: [Unspecified-3-HEX]
         search_method: stk_kdtree
 
@@ -169,7 +178,7 @@ realms:
 
       - type: surface
         physics: surface_force_and_moment
-        output_file_name: oversetMovingCylinder.dat
+        output_file_name: oversetMovingCylinder_rst.dat
         frequency: 1
         parameters: [0,0]
         target_name: wall
@@ -184,12 +193,13 @@ realms:
           compute_vorticity: yes
 
     restart:
-      restart_data_base_name: rst/oversetMovingCylinder.rst
+      restart_data_base_name: rst/oversetMovingCylinder_rst.rst
       restart_frequency: 15
-      restart_start: 100
+      restart_start: 0
+      restart_time: 100
 
     output:
-      output_data_base_name: out/oversetMovingCylinder.exo
+      output_data_base_name: out/oversetMovingCylinder_rst.exo
       output_frequency: 1
       output_node_set: no
       output_variables:
@@ -208,7 +218,7 @@ Time_Integrators:
       name: ti_1
       start_time: 0
       termination_step_count: 30
-      time_step: 0.003
+      time_step: 0.03
       time_stepping_type: fixed
       time_step_count: 0
       second_order_accuracy: yes
