Update to the latest Hypre API changes

--- a/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
+++ b/reg_tests/test_files/airfoilRANSEdgeNGPHypre.rst/airfoilRANSEdgeNGPHypre.rst.yaml
@@ -13,7 +13,7 @@ Simulations:
 # Hypre memory and other configurations
 hypre_config:
     memory_pool_mbs: 1500
-    use_cusparse_sgemm: no
+    use_vendor_sgemm: no
 
 linear_solvers:
 
